<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="serif-monospace"
        android:onClick="switchToggle"
        android:text="@string/enable_vip_access"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/submitField"
        android:layout_width="256dp"
        android:layout_height="49dp"
        android:layout_marginBottom="96dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/submit_field"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="serif-monospace"
        android:text="@string/vip_notifier"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/allvips"
        android:layout_width="335dp"
        android:layout_height="299dp"
        android:layout_marginTop="80dp"
        android:fontFamily="serif-monospace"
        android:gravity="center|top"
        android:text="@string/current_vips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
        android:id="@+id/submitVIPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:onClick="submitVIP"
        android:text="@string/submit"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/removeVIPButton"
        app:layout_constraintTop_toBottomOf="@+id/submitField" />

    <Button
        android:id="@+id/removeVIPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:onClick="removeVIP"
        android:text="@string/remove"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/submitVIPButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitField" />

    <TextView
        android:id="@+id/addviptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="serif-monospace"
        android:text="@string/add_remove_new_vip"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/submitField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:onClick="clearAll"
        android:text="@string/clear_all_vips"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/allvips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>